--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">free html website templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/e">how to make a site</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fsIfRMgo82hofQMXe2J8SMyw4IH/55pGDDSyqI92LEBlBMdavarX/qZ8eXq6SL0ZDR0/pVHlkd5tV2sSqYWueLYUUSLDTeX9ImvkC2G/NWvGKK0yxO6iCkVogq1MuT3a" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m0X/1HugmBPffkocjoWA1ZygCZ6OstDpVEq4AXq5FwHNyqFMdWW5FRCQSYUiMzLMOGVawbg94Xc2nv9WII8gBn7PW/0Va39oWpBk+B84knlOTuOP3Vu8vhbiYqO7gML1" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="2eS1teoAIYjaeY0vlfTBMF6Mj3xlFsp9//6w/q7NS3dOK/veNVcFAwsw38MluyP2EsnTw5nRZmT3i1hTKNsWzyKkvTRlN4kBV2L98V00oLB1M5SpSQygirammz7EXnMA" data-form-email="true">
+                        <input type="hidden" value="UfyGGGz+i94U/6xw2qbLS7fFQRoHEC/P7o7ITo6Hi4Va3bLANqkqg8f5lz88V0StlJAVdPOP1cepWmidTxaWMs2d88BlyIWxRGg4gdv4MASsB0ZvwQBgSfG1vaf8ByRx" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
